force-app/main/default/objects/Case/fields/Creative_Design_Name__c.field-meta.xml
<CustomField>
    <fullName>Creative_Design_Name__c</fullName>
    <label>Creative Design Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>