force-app/main/default/objects/Case/fields/Creative_design_URL__c.field-meta.xml
<CustomField>
    <fullName>Creative_design_URL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creative design URL</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases (Creative design URL)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>