force-app/main/default/objects/Case/fields/Creative_design_URL_Case__c.field-meta.xml
<CustomField>
    <fullName>Creative_design_URL_Case__c</fullName>
    <label>Creative Design URL</label>
    <type>Url</type>
</CustomField>