force-app/main/default/objects/Case/fields/Creative_Designers_Name__c.field-meta.xml
<CustomField>
    <fullName>Creative_Designers_Name__c</fullName>
    <label>Creative Designer&#39;s Name (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Mykolas Suraučius</fullName>
            </value>
            <value>
                <fullName>Rytis Kasperavičius</fullName>
            </value>
            <value>
                <fullName>Santa Dovydaityte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>