force-app/main/default/objects/Case/fields/Creative_Production_Impressions_RMD_MMS1__c.field-meta.xml
<CustomField>
    <fullName>Creative_Production_Impressions_RMD_MMS1__c</fullName>
    <label>Production Impressions &#39;RMD MMS1&#39;</label>
    <type>TextArea</type>
</CustomField>