force-app/main/default/objects/Case/fields/Creative_Production_RMD_CRPR__c.field-meta.xml
<CustomField>
    <fullName>Creative_Production_RMD_CRPR__c</fullName>
    <formula>IF(
ISBLANK(Contract__r.Price_for_creative_production__c),
Price_For_Creative_Production__c,
Contract__r.Price_for_creative_production__c
)</formula>
    <label>Creative Production &#39;RMD_CRPR&#39;</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>