force-app/main/default/objects/Case/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <label>Daily Rate (billable h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>