force-app/main/default/objects/Case/fields/Data_Export_T_RPT_DE__c.field-meta.xml
<CustomField>
    <fullName>Data_Export_T_RPT_DE__c</fullName>
    <label>Data Export &#39;T_RPT_DE&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>