force-app/main/default/objects/Case/fields/Days_since_last_modified__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_modified__c</fullName>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the days since the case was last modified.</inlineHelpText>
    <label>Days since last modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>