force-app/main/default/objects/Case/fields/Define_Description_of_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Define_Description_of_Publisher__c</fullName>
    <label>Define Description of Publisher</label>
    <type>TextArea</type>
</CustomField>