force-app/main/default/objects/Case/fields/DMP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>DMP_Account_Name__c</fullName>
    <inlineHelpText>Audience Base account name</inlineHelpText>
    <label>DMP Account Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>