force-app/main/default/objects/Case/fields/DMP_Rights_1__c.field-meta.xml
<CustomField>
    <fullName>DMP_Rights_1__c</fullName>
    <label>DMP Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>