force-app/main/default/objects/Case/fields/DMP_Tracking_Module__c.field-meta.xml
<CustomField>
    <fullName>DMP_Tracking_Module__c</fullName>
    <inlineHelpText>For client without DSP access</inlineHelpText>
    <label>DMP Tracking Module</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Type_DMP__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>