force-app/main/default/objects/Case/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>