force-app/main/default/objects/Case/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan/Pitch: Demo/Presentation</fullName>
            </value>
            <value>
                <fullName>Measure/Service: QBR</fullName>
            </value>
            <value>
                <fullName>Measure/Service: Hotdesking</fullName>
            </value>
            <value>
                <fullName>Measure/Service: Exceptional Support</fullName>
            </value>
            <value>
                <fullName>Measure/Service: Campaign Review</fullName>
            </value>
            <value>
                <fullName>Measure/Service: Central Campaign Shadowing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>