force-app/main/default/objects/Case/fields/Estimated_Bid_Request_Count_For_Month__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Bid_Request_Count_For_Month__c</fullName>
    <label>Estimated Bid Request Count For Month</label>
    <length>40</length>
    <type>Text</type>
</CustomField>