force-app/main/default/objects/Case/fields/Expected_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Expected_Behavior__c</fullName>
    <inlineHelpText>What were you expecting to happen in the system</inlineHelpText>
    <label>Expected Behavior</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>