force-app/main/default/objects/Case/fields/External_Data_Connection__c.field-meta.xml
<CustomField>
    <fullName>External_Data_Connection__c</fullName>
    <inlineHelpText>Name of the external platform that has to be connected to the account</inlineHelpText>
    <label>External Data Connection</label>
    <length>100</length>
    <type>Text</type>
</CustomField>