force-app/main/default/objects/Case/fields/Frequency_capping__c.field-meta.xml
<CustomField>
    <fullName>Frequency_capping__c</fullName>
    <label>Frequency capping</label>
    <length>118</length>
    <type>Text</type>
</CustomField>