force-app/main/default/objects/Case/fields/Has_In_App_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Has_In_App_Traffic__c</fullName>
    <label>Has In-App Traffic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>