force-app/main/default/objects/Case/fields/Heavy_banner_limit__c.field-meta.xml
<CustomField>
    <fullName>Heavy_banner_limit__c</fullName>
    <label>Heavy Banner Limit (kb)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>