force-app/main/default/objects/Case/fields/I_confirm_that_Legal_document_is_signed__c.field-meta.xml
<CustomField>
    <fullName>I_confirm_that_Legal_document_is_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I confirm that BMSA/PMSA is signed</label>
    <type>Checkbox</type>
</CustomField>