force-app/main/default/objects/Case/fields/Impressions_T_ADS_FEE_2__c.field-meta.xml
<CustomField>
    <fullName>Impressions_T_ADS_FEE_2__c</fullName>
    <label>Impressions &#39;T_ADS_FEE 2&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>