force-app/main/default/objects/Case/fields/Internal_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Internal_Total_Price__c</fullName>
    <formula>Daily_Rate__c *  Time_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Total Price (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>