force-app/main/default/objects/Case/fields/Invoicing_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Period__c</fullName>
    <defaultValue>&quot;Monthly&quot;</defaultValue>
    <label>Invoicing Period</label>
    <length>10</length>
    <type>Text</type>
</CustomField>