force-app/main/default/objects/Case/fields/Invoicing_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Period_From__c</fullName>
    <label>Invoicing Period From</label>
    <type>Date</type>
</CustomField>