force-app/main/default/objects/Case/fields/Invoicing_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Period_To__c</fullName>
    <label>Invoicing Period To</label>
    <type>Date</type>
</CustomField>