force-app/main/default/objects/Case/fields/Issue_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution__c</fullName>
    <inlineHelpText>Admin Field explaining the resolution.</inlineHelpText>
    <label>Issue Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>