force-app/main/default/objects/Case/fields/Legal_Name_of_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name_of_Publisher__c</fullName>
    <label>Legal Name of Publisher</label>
    <length>40</length>
    <type>Text</type>
</CustomField>