force-app/main/default/objects/Case/fields/Link_to_assets_pack__c.field-meta.xml
<CustomField>
    <fullName>Link_to_assets_pack__c</fullName>
    <label>Link to assets pack</label>
    <type>Url</type>
</CustomField>