force-app/main/default/objects/Case/fields/Managed_Service_type__c.field-meta.xml
<CustomField>
    <fullName>Managed_Service_type__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>