force-app/main/default/objects/Case/fields/Market_Place_Description_DMP__c.field-meta.xml
<CustomField>
    <fullName>Market_Place_Description_DMP__c</fullName>
    <inlineHelpText>Only if the audience is &quot;Available in Branded Data Market Place&quot;</inlineHelpText>
    <label>Market Place Description</label>
    <type>TextArea</type>
</CustomField>