force-app/main/default/objects/Case/fields/Master_data_T_RPT_MDS__c.field-meta.xml
<CustomField>
    <fullName>Master_data_T_RPT_MDS__c</fullName>
    <label>Master data &#39;T_RPT_MDS&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>