force-app/main/default/objects/Case/fields/Media_database__c.field-meta.xml
<CustomField>
    <fullName>Media_database__c</fullName>
    <inlineHelpText>Once added can not be removed</inlineHelpText>
    <label>Media database</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MSYNC-AT</fullName>
            </value>
            <value>
                <fullName>MSYNC-BE</fullName>
            </value>
            <value>
                <fullName>MSYNC-BR</fullName>
            </value>
            <value>
                <fullName>MSYNC-CH-</fullName>
            </value>
            <value>
                <fullName>MSYNC-CZ</fullName>
            </value>
            <value>
                <fullName>MSYNC-DE</fullName>
            </value>
            <value>
                <fullName>MSYNC-DK</fullName>
            </value>
            <value>
                <fullName>MSYNC-EE</fullName>
            </value>
            <value>
                <fullName>MSYNC-ES</fullName>
            </value>
            <value>
                <fullName>MSYNC-FI</fullName>
            </value>
            <value>
                <fullName>MSYNC-FR</fullName>
            </value>
            <value>
                <fullName>MSYNC-GRM</fullName>
            </value>
            <value>
                <fullName>MSYNC-IN</fullName>
            </value>
            <value>
                <fullName>MSYNC-IS</fullName>
            </value>
            <value>
                <fullName>MSYNC-IT</fullName>
            </value>
            <value>
                <fullName>MSYNC-LT</fullName>
            </value>
            <value>
                <fullName>MSYNC-LV</fullName>
            </value>
            <value>
                <fullName>MSYNC-NL</fullName>
            </value>
            <value>
                <fullName>MSYNC-NO</fullName>
            </value>
            <value>
                <fullName>MSYNC-PK</fullName>
            </value>
            <value>
                <fullName>MSYNC-PL</fullName>
            </value>
            <value>
                <fullName>MSYNC-RU</fullName>
            </value>
            <value>
                <fullName>MSYNC-SE</fullName>
            </value>
            <value>
                <fullName>MSYNC-SI</fullName>
            </value>
            <value>
                <fullName>MSYNC-SK</fullName>
            </value>
            <value>
                <fullName>MSYNC-TR</fullName>
            </value>
            <value>
                <fullName>MSYNC-UK</fullName>
            </value>
            <value>
                <fullName>MSYNC-US</fullName>
            </value>
            <value>
                <fullName>MSYNC-XM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>