force-app/main/default/objects/Case/fields/Miscellaneous_OTH__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_OTH__c</fullName>
    <label>Miscellaneous &#39;OTH&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>