force-app/main/default/objects/Case/fields/Name_Surname1__c.field-meta.xml
<CustomField>
    <fullName>Name_Surname1__c</fullName>
    <label>Name Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>