force-app/main/default/objects/Case/fields/Name_Surname2__c.field-meta.xml
<CustomField>
    <fullName>Name_Surname2__c</fullName>
    <label>Name Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>