force-app/main/default/objects/Case/fields/Name_Surname__c.field-meta.xml
<CustomField>
    <fullName>Name_Surname__c</fullName>
    <label>Name Surname</label>
    <length>225</length>
    <type>Text</type>
</CustomField>