force-app/main/default/objects/Case/fields/New_user_login3__c.field-meta.xml
<CustomField>
    <fullName>New_user_login3__c</fullName>
    <label>New user login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>