force-app/main/default/objects/Case/fields/Not_Served_Through_Adform__c.field-meta.xml
<CustomField>
    <fullName>Not_Served_Through_Adform__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this check box if client will not be served through Adform platform</inlineHelpText>
    <label>Not Served Through Adform</label>
    <type>Checkbox</type>
</CustomField>