force-app/main/default/objects/Case/fields/Order_details__c.field-meta.xml
<CustomField>
    <fullName>Order_details__c</fullName>
    <inlineHelpText>Max Allowed Banner Weight, Set up Details &amp; etc.</inlineHelpText>
    <label>Order details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>