force-app/main/default/objects/Case/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Order No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>