force-app/main/default/objects/Case/fields/Other_Pricing_details__c.field-meta.xml
<CustomField>
    <fullName>Other_Pricing_details__c</fullName>
    <label>Other Pricing details</label>
    <length>30</length>
    <type>Text</type>
</CustomField>