force-app/main/default/objects/Case/fields/Other_RCH_OTHER_1__c.field-meta.xml
<CustomField>
    <fullName>Other_RCH_OTHER_1__c</fullName>
    <label>Other RCH &#39;OTHER 1&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>