force-app/main/default/objects/Case/fields/Other_reporting_T_RPT_OTH__c.field-meta.xml
<CustomField>
    <fullName>Other_reporting_T_RPT_OTH__c</fullName>
    <label>Other reporting &#39;T_RPT_OTH&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>