force-app/main/default/objects/Case/fields/Other_specifications__c.field-meta.xml
<CustomField>
    <fullName>Other_specifications__c</fullName>
    <inlineHelpText>E.g. Product Targeting, Data Exports, Container Tags for Impressions, etc.</inlineHelpText>
    <label>Other specifications</label>
    <type>TextArea</type>
</CustomField>