force-app/main/default/objects/Case/fields/Phase_2_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Functionality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phase 2 Functionality</label>
    <type>Checkbox</type>
</CustomField>