force-app/main/default/objects/Case/fields/Phase_2_Functionality_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Functionality_Proposal__c</fullName>
    <inlineHelpText>Explains what the Phase 2 functionality should be like if flagged by the User as a potential design change.</inlineHelpText>
    <label>Phase 2 Functionality Proposal</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>