force-app/main/default/objects/Case/fields/Placement_sizes__c.field-meta.xml
<CustomField>
    <fullName>Placement_sizes__c</fullName>
    <label>Placement sizes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>