force-app/main/default/objects/Case/fields/Platform_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Account_Name__c</fullName>
    <label>Platform Account Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>