force-app/main/default/objects/Case/fields/Platform_ID__c.field-meta.xml
<CustomField>
    <fullName>Platform_ID__c</fullName>
    <label>Platform ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>