force-app/main/default/objects/Case/fields/PPRM__c.field-meta.xml
<CustomField>
    <fullName>PPRM__c</fullName>
    <label>PPRM</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RTB__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>