force-app/main/default/objects/Case/fields/PPRM_over_the_limit_RMD_PPRM__c.field-meta.xml
<CustomField>
    <fullName>PPRM_over_the_limit_RMD_PPRM__c</fullName>
    <label>PPRM over the limit &#39;RMD PPRM&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>