force-app/main/default/objects/Case/fields/Prevented_from_working__c.field-meta.xml
<CustomField>
    <fullName>Prevented_from_working__c</fullName>
    <inlineHelpText>Tell us if this is blocking you from getting your work done.</inlineHelpText>
    <label>Prevented from working?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>