force-app/main/default/objects/Case/fields/Price_For_Creative_Production__c.field-meta.xml
<CustomField>
    <fullName>Price_For_Creative_Production__c</fullName>
    <label>Price For Creative Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>