force-app/main/default/objects/Case/fields/Primary_User_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Primary_User_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary User/Stakeholder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>