force-app/main/default/objects/Case/fields/Publisher_Domain__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Domain__c</fullName>
    <label>Publisher Domain</label>
    <length>118</length>
    <type>Text</type>
</CustomField>