force-app/main/default/objects/Case/fields/Questions_to_submitter_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Questions_to_submitter_Administrator__c</fullName>
    <inlineHelpText>Include your question to the Administrator or Submitter here. On Save, an email will be sent to the User if the Status = &quot;Under Review | Awaiting Admin&quot; or Case submitter if Status = &quot;Under Review | Awaiting Submitter&quot;</inlineHelpText>
    <label>Questions to Submitter/Administrator</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>