force-app/main/default/objects/Case/fields/Raw_Data_Extract_T_RPT_RDE__c.field-meta.xml
<CustomField>
    <fullName>Raw_Data_Extract_T_RPT_RDE__c</fullName>
    <label>Raw Data Extract &#39;T_RPT_RDE&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>