force-app/main/default/objects/Case/fields/Region_Tooltip_Choose_Only_the_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Region_Tooltip_Choose_Only_the_Relevant__c</fullName>
    <inlineHelpText>Choose only relevant region where data will be stored</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>