force-app/main/default/objects/Case/fields/Regional_category_storage__c.field-meta.xml
<CustomField>
    <fullName>Regional_category_storage__c</fullName>
    <inlineHelpText>Only optional choice. Enables different region selection for different categories.</inlineHelpText>
    <label>Regional Category Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>