force-app/main/default/objects/Case/fields/Related_DSP_TPAS_Platform_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_DSP_TPAS_Platform_ID__c</fullName>
    <inlineHelpText>The DSP accounts which will generate the Data Events. Only for Enterprise, DSP Audience Connector and Pay As You Go contracts.</inlineHelpText>
    <label>Related DSP/TPAS Platform ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>