force-app/main/default/objects/Case/fields/Rich_Media_Adserving_RMD_PPRM_2__c.field-meta.xml
<CustomField>
    <fullName>Rich_Media_Adserving_RMD_PPRM_2__c</fullName>
    <label>Rich Media Adserving &#39;RMD PPRM 2&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>