force-app/main/default/objects/Case/fields/Rights_Permissions_Whitelisting__c.field-meta.xml
<CustomField>
    <fullName>Rights_Permissions_Whitelisting__c</fullName>
    <inlineHelpText>Which agency accounts and advertisers can have access to this account data?</inlineHelpText>
    <label>Rights &amp; Permissions Whitelisting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>