force-app/main/default/objects/Case/fields/RM_over_the_limit_RMD_HBN__c.field-meta.xml
<CustomField>
    <fullName>RM_over_the_limit_RMD_HBN__c</fullName>
    <label>RM over the limit &#39;RMD_HBN&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>