force-app/main/default/objects/Case/fields/Role_p__c.field-meta.xml
<CustomField>
    <fullName>Role_p__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Ad Operations Specialist</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>Yield Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>