force-app/main/default/objects/Case/fields/RTB__c.field-meta.xml
<CustomField>
    <fullName>RTB__c</fullName>
    <label>RTB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>